bin_PROGRAMS = quickunion quickfind randomize triarray linkedlist
quickunion_SOURCES = quickunion.cpp 
quickfind_SOURCES = quickfind.cpp 
randomize_SOURCES = randomize.cpp 
triarray_SOURCES = triangular_array.cpp 
linkedlist_SOURCES = linkedlist.cpp 
CXX=clang++
CXXFLAGS="-g" 
LDFLAGS="-g"
AM_CFLAGS ="-g"
AM_CXXFLAGS="-std=c++0x"
