bin_PROGRAMS = bubblesort insertionsort mergesort
shellsort_SOURCES = shellsort.hpp shellsort.cpp
mergesort_SOURCES = mergesort.hpp mergesort.cpp
selectionsort_SOURCES = selectionsort.hpp selectionsort.cpp
insertionsort_SOURCES = insertionsort.hpp insertionsort.cpp
bubblesort_SOURCES = bubblesort.hpp bubblesort.cpp
quicksort_SOURCES = quicksort_header.hpp quicksort.cpp
CXX=clang++
CXXFLAGS="-g" 
LDFLAGS="-g"
AM_CFLAGS ="-g"
AM_CXXFLAGS="-std=c++0x"
