bin_PROGRAMS = bubblesort selectionsort insertionsort mergesort bu_mergesort quicksort
bubblesort_SOURCES = bubblesort.hpp bubblesort.cpp
selectionsort_SOURCES = selectionsort.hpp selectionsort.cpp
insertionsort_SOURCES = insertionsort.hpp insertionsort.cpp
mergesort_SOURCES = mergesort.hpp mergesort.cpp
bu_mergesort_SOURCES = bu_mergesort.hpp
quicksort_SOURCES = quicksort.hpp quicksort.cpp
shellsort_SOURCES = shellsort.hpp shellsort.cpp
CXX=clang++
CXXFLAGS="-g" 
LDFLAGS="-g"
AM_CFLAGS ="-g"
AM_CXXFLAGS="-g -std=c++0x"
